Thu May 23 17:35:30 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (loaded_feature_path): fix invalid read by index underflow.
	  the beginning of name is also a boundary as well as just after '/'.

Thu May 23 17:21:22 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_profile_dump_on): revert r40898.  ok to show the record
	  accumulating while lazy_sweep().

Wed May 22 16:50:18 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_profile_dump_on): use size_t to get rid of overflow and
	  show the header when next_index > 0, instead of next_index != 1.

Wed May 22 15:18:59 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (setup_overlapped): check the error code in addition
	  to the result of SetFilePointer() to determine if an error occurred,
	  because INVALID_SET_FILE_POINTER is a valid value.
	  [ruby-core:55098] [Bug #8431]

	* win32/win32.c (setup_overlapped, finish_overlapped): extract from
	  rb_w32_read() and rb_w32_write().

Wed May 22 14:19:56 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_prepare_free_objects, rest_sweep, lazy_sweep): fix position
	  of `during_gc' setting.

Wed May 22 07:36:08 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (garbage_collect): all GC is start from garbage_collect()
	  (or garbage_collect_body()). `garbage_collect()' accept additional
	  two parameters `full_mark' and `immediate_sweep'.
	  If `full_mark' is TRUE, then force it full gc (major gc), otherwise,
	  it depends on status of object space. Now, it will be minor gc.
	  If `immediate_sweep' is TRUE, then disable lazy sweep.
	  To allocate free memory, `full_mark' and `immediate_sweep' should be
	  TRUE. Otherwise, they should be FALSE.

	* gc.c (gc_prepare_free_objects): use `garbage_collect_body()'.

	* gc.c (slot_sweep, before_gc_sweep, after_gc_sweep): add logging code.

Tue May 21 22:47:06 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/strscan/strscan.c (strscan_aref): support named captures.